--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^2.29.0
   cloud_firestore: ^4.16.1
   firebase_storage: ^11.7.5
+  path: ^1.9.0
+  image_picker: ^1.1.1
 
 dev_dependencies:
   flutter_test:
