--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geocoding: ^3.0.0
   geolocator: ^12.0.0
   url_launcher: ^6.2.6
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
